--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
         "@symfony/webpack-encore": "^4.0.0",
         "autoprefixer": "^10.4.14",
         "core-js": "^3.23.0",
+        "fork-ts-checker-webpack-plugin": "^7.3.0",
         "postcss-loader": "^7.3.3",
         "regenerator-runtime": "^0.13.9",
         "sass": "^1.64.2",
