--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
         "@types/react": "^18.2.18",
         "@types/react-dom": "^18.2.7",
         "autoprefixer": "^10.4.14",
+        "bootstrap": "^5.3.1",
         "core-js": "^3.23.0",
         "eslint": "^8.46.0",
         "eslint-plugin-react": "^7.33.1",
@@ -39,6 +40,9 @@
         "defaults"
     ],
     "eslintConfig": {
-        "extends": ["eslint:recommended", "plugin:react/recommended"]
+        "extends": [
+            "eslint:recommended",
+            "plugin:react/recommended"
+        ]
     }
 }
