ajout des entités à l'api, correction de l'entité users en user, mise en place du tableau admin

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -41,8 +41,10 @@ security:
     access_control:
         # - { path: ^/admin, roles: ROLE_ADMIN }
         # - { path: ^/profile, roles: ROLE_USER }
-        - { path: ^/api/login, roles: PUBLIC_ACCESS }
-        - { path: ^/api,       roles: IS_AUTHENTICATED_FULLY }
+
+    # Ligne 46 et 47 à décommenter pour devoir se loger (API)
+        # - { path: ^/api/login, roles: PUBLIC_ACCESS }
+        # - { path: ^/api,       roles: IS_AUTHENTICATED_FULLY }
 
 
 when@test:
