--- a/composer.json
+++ b/composer.json
@@ -93,7 +93,9 @@
         }
     },
     "require-dev": {
-        "phpunit/phpunit": "^9.5",
+        "dama/doctrine-test-bundle": "^7.2",
+        "doctrine/doctrine-fixtures-bundle": "^3.4",
+        "phpunit/phpunit": "^9.6",
         "symfony/browser-kit": "6.3.*",
         "symfony/css-selector": "6.3.*",
         "symfony/debug-bundle": "6.3.*",
