Correction page acceuil et boutons Ajout global UDM React

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,5 +3,6 @@
         "jsx": "react",
         "noImplicitAny": false,
         "esModuleInterop": true,
+        "allowUmdGlobalAccess": true,
     }
 }
