Finition du merge avec main: Gestion des erreurs jest et second projet js

--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
         "@symfony/stimulus-bridge": "^3.2.0",
         "@symfony/ux-react": "file:vendor/symfony/ux-react/assets",
         "@symfony/webpack-encore": "^4.0.0",
+        "@testing-library/dom": "^9.3.1",
+        "@testing-library/user-event": "^14.4.3",
+        "@types/jest": "^29.5.3",
         "@types/react": "^18.2.18",
         "@types/react-dom": "^18.2.7",
         "autoprefixer": "^10.4.14",
@@ -17,6 +20,7 @@
         "eslint-plugin-react": "^7.33.1",
         "eslint-webpack-plugin": "^4.0.1",
         "fork-ts-checker-webpack-plugin": "^7.3.0",
+        "jest": "^29.6.2",
         "postcss-loader": "^7.3.3",
         "regenerator-runtime": "^0.13.9",
         "sass": "^1.64.2",
