--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,5 +4,6 @@
         "noImplicitAny": false,
         "esModuleInterop": true,
         "allowUmdGlobalAccess": true,
+        "types": ["jest"],
     }
 }
