--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
         "prop-types": "^15.8.1",
         "react": "^18.2.0",
         "react-bootstrap": "^2.8.0",
-        "react-dom": "^18.2.0"
+        "react-dom": "^18.2.0",
+        "react-hook-form": "^7.45.4"
     },
     "browserslist": [
         "defaults"
