--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,3 +1,10 @@
+crud_controllers:
+    resource:
+        path: ../src/CrudController/
+        namespace: App\CrudController
+    prefix: "/crud"
+    type: attribute
+
 controllers:
     resource:
         path: ../src/Controller/
