Changement du favicon avec le logo.svg depuis build/images dans public

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -14,8 +14,9 @@
     "description": "A highly scalable & plug-able, Progressive Web Application foundation with the best Developer Experience.",
     "icons": [
       {
-        "src": "/images/logo.svg",
-        "sizes": "192x192"
+        "src": "{{ asset('build/images/logo.svg') }}",
+        "sizes": "192x192",
+        "type": "image/svg+xml"
       }
     ]
 }
