--- a/public/manifest.json
+++ b/public/manifest.json
@@ -17,6 +17,11 @@
         "src": "{{ asset('build/images/logo.svg') }}",
         "sizes": "192x192",
         "type": "image/svg+xml"
+      },
+      {
+      "src": "{{ asset('build/images/logo.svg') }}",
+      "sizes": "512x512",
+      "type": "image/svg+xml"
       }
     ]
 }
