--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -29,6 +29,11 @@ security:
             jwt: ~            
         main:
             lazy: true
+            custom_authenticator: App\Security\AppAuthenticator
+            logout:
+                path: app_logout
+                # where to redirect after logout
+                # target: app_any_route
 
 
             # activate different ways to authenticate
