C'est pas bien ça

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -14,7 +14,7 @@
     "description": "A highly scalable & plug-able, Progressive Web Application foundation with the best Developer Experience.",
     "icons": [
       {
-        "src": "/build/images.logo.svg",
+        "src": "/build/images/logo.5fd235f1.svg",
         "sizes": "48x48 72x72 96x96 128x128 256x256 512x512",
         "type": "image/svg+xml",
         "purpose": "any"
