--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -45,8 +45,8 @@ security:
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
-        # - { path: ^/admin, roles: ROLE_ADMIN }
-        # - { path: ^/profile, roles: ROLE_USER }
+        - { path: ^/admin, roles: ROLE_ADMIN }
+        - { path: ^/profile, roles: ROLE_USER }
 
     # Ligne 46 et 47 à décommenter pour devoir se loger (API)
         # - { path: ^/api/login, roles: PUBLIC_ACCESS }
