--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
         ]
     },
     "dependencies": {
-        "@tanstack/react-query": "^4.33.0"
+        "@tanstack/react-query": "^4.33.0",
+        "react-error-boundary": "^4.0.11"
     }
 }
